--- a/you.html
+++ b/you.html
@@ -51,21 +51,8 @@
       color: #333;
       margin-top: 8px;
     }
-    .subtitleItem {
-      margin: 2px 0;
-    }
-    .edit-form {
-      background: #f9f9f9;
-      padding: 10px;
-      margin-top: 10px;
-      border: 1px solid #ccc;
-    }
-    .edit-form input, .edit-form textarea {
-      width: 100%;
-      margin-bottom: 8px;
-    }
-    .edit-form button {
-      margin-right: 6px;
+    .subtitleRow {
+      margin-bottom: 6px;
     }
   </style>
 </head>
@@ -90,7 +77,7 @@
   <button onclick="changeAccount()">change account</button>
 
   <h2>change your icon</h2>
-  <h3>icon (.jpg, 600×600, 30KB or less)</h3>
+  <h3>icon(.jpg, 600px×600px, 30KB or less)</h3>
   <input id="iconInput" type="file" accept=".jpg"><br>
   <button onclick="updateIcon()">update icon</button>
   <div id="iconStatus"></div>
@@ -98,10 +85,8 @@
   <h2>upload a video or music</h2>
   <h3>title</h3>
   <input id="titleInput" placeholder="title"><br>
-
   <h3>video or music (.mp4 / .mp3 / .wav, 30MB or less)</h3>
   <input id="fileInput" type="file" accept="video/mp4,audio/mp3,audio/wav"><br>
-
   <h3>thumbnail (.jpg, 640×360 / 640×480 / 360×640, 50KB or less)</h3>
   <input type="checkbox" id="useThumbUpload"> upload custom thumbnail?<br>
   <input id="thumbInput" type="file" accept=".jpg" disabled><br>
@@ -111,26 +96,18 @@
     <option value="640x480">640×480</option>
     <option value="360x640">360×640</option>
   </select><br>
-
   <h3>description</h3>
   <textarea id="description" placeholder="description" rows="4" cols="40"></textarea><br>
-
   <h3>lock</h3>
   <input type="checkbox" id="lockToggle" onchange="toggleUploadLock()"> lock this video or music<br>
   <input id="lockPassword" type="password" placeholder="password (if locked)" disabled><br>
 
-  <h3>subtitles (.vtt)</h3>
-  <input type="checkbox" id="useSubtitleUpload"> upload subtitles?<br>
-  <div id="subtitleUploadArea" style="display: none;">
-    <input id="subtitleLangInput" placeholder="language (e.g. en, ja)">
-    <input id="subtitleInput" type="file" accept=".vtt">
-    <button onclick="addSubtitle()">add subtitle</button>
-    <ul id="subtitleList"></ul>
-  </div>
+  <h3>subtitles (.vtt, optional)</h3>
+  <div id="subtitleContainer"></div>
+  <button onclick="addSubtitleRow()">➕ Add subtitle</button><br><br>
 
   <button class="upload_button" onclick="upload()">upload</button>
   <div id="uploadStatus"></div>
-
   <h2>your videos and musics</h2>
   <label for="sortSelect">Sort by:</label>
   <select id="sortSelect" onchange="setSortOrder(this.value)">
@@ -138,17 +115,13 @@
     <option value="asc">oldest first</option>
   </select>
   <div id="list"></div>
+
 <script>
 let me = Storage.getUser();
 if (!me) location.href = "signin";
 document.getElementById("currentUser").textContent = me;
 document.getElementById("iconPreview").src = `${SERVER}/icons/${me}.jpg`;
 let sortOrder = "desc";
-const subtitleFiles = [];
-
-function sanitizeText(text) {
-  return text.replace(/\\/g, "\\\\").replace(/"/g, '\\"').replace(/\r?\n/g, "\\n");
-}
 
 document.getElementById("useThumbUpload").addEventListener("change", () => {
   const checked = document.getElementById("useThumbUpload").checked;
@@ -156,121 +129,26 @@ document.getElementById("useThumbUpload").addEventListener("change", () => {
   document.getElementById("thumbSize").disabled = !checked;
 });
 
-document.getElementById("useSubtitleUpload").addEventListener("change", () => {
-  const checked = document.getElementById("useSubtitleUpload").checked;
-  document.getElementById("subtitleUploadArea").style.display = checked ? "block" : "none";
-});
+function addSubtitleRow() {
+  const container = document.getElementById("subtitleContainer");
+  const index = container.children.length;
+  const row = document.createElement("div");
+  row.className = "subtitleRow";
+  row.innerHTML = `
+    <input placeholder="language code (e.g. en, ja)" id="subtitleLang-${index}" style="width: 120px;">
+    <input type="file" accept=".vtt" id="subtitleFile-${index}">
+  `;
+  container.appendChild(row);
+}
+
+function setSortOrder(order) {
+  sortOrder = order;
+  renderVideos();
+}
 
 function toggleUploadLock() {
   document.getElementById("lockPassword").disabled = !document.getElementById("lockToggle").checked;
 }
-
-function addSubtitle() {
-  const lang = document.getElementById("subtitleLangInput").value.trim();
-  const file = document.getElementById("subtitleInput").files[0];
-  if (!lang || !file) return alert("Enter language and select a .vtt file.");
-  if (!file.name.endsWith(".vtt")) return alert("Only .vtt files allowed.");
-
-  subtitleFiles.push({ language: lang, file });
-  const li = document.createElement("li");
-  li.textContent = `${lang} - ${file.name}`;
-  document.getElementById("subtitleList").appendChild(li);
-
-  document.getElementById("subtitleLangInput").value = "";
-  document.getElementById("subtitleInput").value = "";
-}
-function upload() {
-  const title = document.getElementById("titleInput").value.trim();
-  const file = document.getElementById("fileInput").files[0];
-  const thumbChecked = document.getElementById("useThumbUpload").checked;
-  const thumb = document.getElementById("thumbInput").files[0];
-  const thumbSize = document.getElementById("thumbSize").value;
-  const description = document.getElementById("description").value.trim();
-  const isLocked = document.getElementById("lockToggle").checked;
-  const password = document.getElementById("lockPassword").value.trim();
-  const subtitleChecked = document.getElementById("useSubtitleUpload").checked;
-  const status = document.getElementById("uploadStatus");
-
-  if (!title || !file) return alert("Enter title and select a file.");
-
-  const form = new FormData();
-  form.append("username", me);
-  form.append("title", title);
-  form.append("description", description);
-  form.append("lockPassword", isLocked ? password : "");
-  form.append("video", file);
-
-  function finishSend(blob) {
-    if (blob) form.append("thumbnail", blob, "thumb.jpg");
-
-    fetch(`${SERVER}/upload`, {
-      method: "POST",
-      body: form
-    })
-      .then(res => res.ok ? res.json() : Promise.reject())
-      .then(({ id }) => {
-        const subtitlePromises = [];
-
-        if (subtitleChecked && subtitleFiles.length > 0) {
-          subtitleFiles.forEach(({ language, file }) => {
-            const subForm = new FormData();
-            subForm.append("subtitle", file);
-            subForm.append("language", language);
-            subtitlePromises.push(
-              fetch(`${SERVER}/uploadSubtitle/${id}`, {
-                method: "POST",
-                body: subForm
-              })
-            );
-          });
-        }
-
-        Promise.all(subtitlePromises)
-          .then(() => {
-            status.textContent = "Upload complete.";
-            renderVideos();
-          })
-          .catch(() => {
-            status.textContent = "Upload complete (subtitle failed).";
-            renderVideos();
-          });
-      })
-      .catch(() => {
-        status.textContent = "Upload failed.";
-      });
-  }
-
-  if (thumbChecked && thumb) {
-    const [w, h] = thumbSize.split("x").map(Number);
-    cropImage(thumb, w, h, finishSend);
-  } else {
-    finishSend(null);
-  }
-}
-
-function cropImage(file, width, height, callback) {
-  const img = new Image();
-  const canvas = document.createElement("canvas");
-  canvas.width = width;
-  canvas.height = height;
-  const ctx = canvas.getContext("2d");
-
-  const reader = new FileReader();
-  reader.onload = () => {
-    img.onload = () => {
-      const ratio = Math.max(width / img.width, height / img.height);
-      const w = img.width * ratio;
-      const h = img.height * ratio;
-      const x = (width - w) / 2;
-      const y = (height - h) / 2;
-      ctx.drawImage(img, x, y, w, h);
-      canvas.toBlob(callback, "image/jpeg");
-    };
-    img.src = reader.result;
-  };
-  reader.readAsDataURL(file);
-}
-
 function renderVideos() {
   fetch(`${SERVER}/videos/user/${me}`)
     .then(res => res.json())
@@ -281,51 +159,230 @@ function renderVideos() {
         return sortOrder === "asc" ? ta - tb : tb - ta;
       });
 
-      const list = videos.map(v => {
-        const thumb = v.thumbnail || `${v.id}.jpg`;
-        const subtitleList = v.subtitles
-          ? Object.keys(v.subtitles).map(lang => `<li>${lang}</li>`).join("")
-          : "";
-        const safeTitle = sanitizeText(v.title);
-        const safeDesc = sanitizeText(v.description || "");
-
-        return `
-          <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;" id="video-${v.id}">
-            <img src="${SERVER}/thumbnails/${thumb}?t=${Date.now()}" width="200"><br>
-            <b>
-              ${safeTitle}
-              ${v.password ? `<img src="img/lock.svg" alt="locked" class="lockIcon">` : ""}
-            </b><br>
-            ${new Date(v.date).toLocaleString("ja-JP", {
-              year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit"
-            })}<br>
-            <a href="watch?id=${v.id}">watch</a>
-            <button onclick='deleteVideo("${v.id}")'>delete</button>
-            <div id="subtitles-${v.id}">
-              ${subtitleList ? `<ul>${subtitleList}</ul>` : ""}
-            </div>
-          </div>
-        `;
-      }).join("");
+      const list = videos.map(v => `
+        <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
+          <img src="${SERVER}/thumbnails/${v.thumbnail || `${v.id}.jpg`}?t=${Date.now()}" width="200"><br>
+          <b>
+            ${v.title}
+            ${v.password ? `<img src="img/lock.svg" alt="locked" class="lockIcon">` : ""}
+          </b><br>
+          ${new Date(v.date).toLocaleString("ja-JP", {
+            year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit"
+          })}<br>
+          <a href="watch?id=${v.id}">watch</a>
+          <button onclick="deleteVideo('${v.id}')">delete</button>
+          <button onclick="showEdit('${v.id}', \`${v.title}\`, \`${v.description || ""}\`)">edit</button>
+          <div id="edit-${v.id}"></div>
+        </div>
+      `).join("");
       document.getElementById("list").innerHTML = list || "No videos yet.";
     });
 }
 
-function deleteVideo(id) {
-  if (!confirm("Delete this video?")) return;
-  fetch(`${SERVER}/deleteVideo/${id}`, {
-    method: "DELETE"
-  })
-    .then(res => res.ok ? res.json() : Promise.reject())
-    .then(() => {
-      document.getElementById(`video-${id}`).remove();
-    })
-    .catch(() => alert("Failed to delete."));
+function upload() {
+  const title = document.getElementById("titleInput").value.trim();
+  const file = document.getElementById("fileInput").files[0];
+  const thumbChecked = document.getElementById("useThumbUpload").checked;
+  const thumb = document.getElementById("thumbInput").files[0];
+  const thumbSizeValue = document.getElementById("thumbSize").value;
+  const [tw, th] = thumbSizeValue.split("x").map(Number);
+  const description = document.getElementById("description").value.trim();
+  const isLocked = document.getElementById("lockToggle").checked;
+  const password = document.getElementById("lockPassword").value.trim();
+  const status = document.getElementById("uploadStatus");
+
+  if (!title || !file) return alert("Enter title and file.");
+  if (file.size > 30 * 1024 * 1024) return alert("File too big.");
+  if (thumbChecked && !thumb) return alert("Select a thumbnail image.");
+  if (thumbChecked && thumb.size > 130 * 1024) return alert("Thumbnail too big.");
+  if (isLocked && !password) return alert("Enter password.");
+
+  status.innerHTML = `<span class="spinner"></span> Uploading...`;
+
+  const form = new FormData();
+  form.append("username", me);
+  form.append("title", title);
+  form.append("description", description);
+  form.append("video", file);
+  form.append("lockPassword", isLocked ? password : "");
+
+  function submit(formData) {
+    fetch(`${SERVER}/upload`, { method: "POST", body: formData })
+      .then(res => res.ok ? res.json() : Promise.reject())
+      .then(data => {
+        status.textContent = "✅ Upload successful.";
+        renderVideos();
+        resetForm();
+        if (data.id) uploadSubtitles(data.id);
+      })
+      .catch(() => {
+        status.textContent = "❌ Upload failed.";
+      });
+  }
+
+  function resetForm() {
+    document.getElementById("titleInput").value = "";
+    document.getElementById("fileInput").value = "";
+    document.getElementById("thumbInput").value = "";
+    document.getElementById("description").value = "";
+    document.getElementById("lockToggle").checked = false;
+    document.getElementById("lockPassword").value = "";
+    document.getElementById("lockPassword").disabled = true;
+    document.getElementById("useThumbUpload").checked = false;
+    document.getElementById("thumbInput").disabled = true;
+    document.getElementById("thumbSize").disabled = true;
+    document.getElementById("subtitleContainer").innerHTML = "";
+    setTimeout(() => status.textContent = "", 3000);
+  }
+
+  if (thumbChecked) {
+    cropImage(thumb, tw, th, blob => {
+      form.append("thumbnail", blob, "thumb.jpg");
+      submit(form);
+    });
+  } else {
+    submit(form);
+  }
+}
+function uploadSubtitles(videoId) {
+  const container = document.getElementById("subtitleContainer");
+  const rows = container.querySelectorAll(".subtitleRow");
+
+  rows.forEach((row, i) => {
+    const langInput = row.querySelector(`#subtitleLang-${i}`);
+    const fileInput = row.querySelector(`#subtitleFile-${i}`);
+    const lang = langInput?.value.trim();
+    const file = fileInput?.files[0];
+
+    if (!lang || !file) return;
+
+    if (file.size > 100 * 1024) {
+      alert(`Subtitle file too big (${lang}).`);
+      return;
+    }
+
+    const form = new FormData();
+    form.append("language", lang);
+    form.append("subtitle", file);
+
+    fetch(`${SERVER}/uploadSubtitle/${videoId}`, {
+      method: "POST",
+      body: form
+    }).catch(() => {
+      console.warn(`Failed to upload subtitle for ${lang}`);
+    });
+  });
 }
 
-function setSortOrder(order) {
-  sortOrder = order;
-  renderVideos();
+function updateIcon() {
+  const input = document.getElementById("iconInput");
+  const file = input.files[0];
+  const status = document.getElementById("iconStatus");
+  if (!file) return alert("Select a .jpg image.");
+  if (file.size > 30 * 1024) return alert("Icon too big.");
+
+  status.innerHTML = `<span class="spinner"></span> Updating icon...`;
+
+  cropImage(file, 600, 600, blob => {
+    const form = new FormData();
+    form.append("username", me);
+    form.append("icon", blob, "icon.jpg");
+
+    fetch(`${SERVER}/updateIcon`, {
+      method: "POST",
+      body: form
+    })
+      .then(res => res.ok ? res.json() : Promise.reject())
+      .then(() => {
+        document.getElementById("iconPreview").src = `${SERVER}/icons/${me}.jpg?${Date.now()}`;
+        input.value = "";
+        status.textContent = "✅ Icon updated.";
+      })
+      .catch(() => status.textContent = "❌ Icon update failed.")
+      .finally(() => setTimeout(() => status.textContent = "", 3000));
+  });
+}
+
+function showEdit(id, title, description) {
+  const container = document.getElementById(`edit-${id}`);
+  container.innerHTML = `
+    <p>Edit:</p>
+    <p>title</p>
+    <input id="title-${id}" value="${title}" style="width: 80%;"><br>
+    <p>description</p>
+    <textarea id="desc-${id}" rows="4" style="width: 80%;">${description}</textarea><br>
+    <p>thumbnail</p>
+    <input type="checkbox" id="useThumbEdit-${id}"> change thumbnail?<br>
+    <input id="thumb-${id}" type="file" accept=".jpg" disabled><br>
+    <p>lock</p>
+    <input type="checkbox" id="lockToggle-${id}" onchange="toggleEditLock('${id}')"> lock this video or music<br>
+    <input id="lockPassword-${id}" type="password" placeholder="password (if locked)" disabled><br>
+    <button onclick="submitEdit('${id}')">save</button>
+    <button onclick="cancelEdit('${id}')">cancel</button>
+  `;
+
+  document.getElementById(`useThumbEdit-${id}`).addEventListener("change", () => {
+    document.getElementById(`thumb-${id}`).disabled = !document.getElementById(`useThumbEdit-${id}`).checked;
+  });
+}
+
+function cancelEdit(id) {
+  document.getElementById(`edit-${id}`).innerHTML = "";
+}
+
+function submitEdit(id) {
+  const titleEl = document.getElementById(`title-${id}`);
+  const descEl = document.getElementById(`desc-${id}`);
+  const thumbEl = document.getElementById(`thumb-${id}`);
+  const lockToggle = document.getElementById(`lockToggle-${id}`);
+  const passEl = document.getElementById(`lockPassword-${id}`);
+
+  if (!titleEl || !descEl || !thumbEl || !lockToggle || !passEl) {
+    alert("編集フォームが正しく表示されていません。");
+    return;
+  }
+
+  const newTitle = titleEl.value.trim();
+  const newDesc = descEl.value.trim();
+  const thumbChecked = document.getElementById(`useThumbEdit-${id}`).checked;
+  const newThumb = thumbEl.files[0];
+  const isLocked = lockToggle.checked;
+  const password = passEl.value.trim();
+
+  if (thumbChecked && !newThumb) return alert("Select a thumbnail image.");
+  if (thumbChecked && newThumb.size > 130 * 1024) return alert("Thumbnail too big.");
+  if (isLocked && !password) return alert("Enter password.");
+
+  const form = new FormData();
+  form.append("title", newTitle);
+  form.append("description", newDesc);
+  form.append("lockPassword", isLocked ? password : "");
+
+  function finishSend(blob) {
+    if (blob) form.append("thumbnail", blob, "thumb.jpg");
+    fetch(`${SERVER}/editVideo/${id}`, {
+      method: "PATCH",
+      body: form
+    })
+    .then(res => res.ok ? res.json() : Promise.reject())
+    .then(() => {
+      renderVideos();
+      cancelEdit(id);
+    })
+    .catch(() => alert("Failed to save edits."));
+  }
+
+  if (thumbChecked) {
+    cropImage(newThumb, 640, 360, finishSend);
+  } else {
+    finishSend(null);
+  }
+}
+
+function deleteVideo(id) {
+  if (!confirm("Delete this video?")) return;
+  fetch(`${SERVER}/deleteVideo/${id}`, { method: "DELETE" })
+    .then(() => renderVideos());
 }
 
 function logout() {
@@ -334,7 +391,7 @@ function logout() {
 }
 
 function removeAccount() {
-  if (!confirm("Delete your account?")) return;
+  if (!confirm("Do you want to delete your account?")) return;
   fetch(`${SERVER}/deleteAccount`, {
     method: "DELETE",
     headers: { "Content-Type": "application/json" },
