--- a/you.html
+++ b/you.html
@@ -129,6 +129,10 @@ document.getElementById("useThumbUpload").addEventListener("change", () => {
   document.getElementById("thumbSize").disabled = !checked;
 });
 
+function toggleUploadLock() {
+  document.getElementById("lockPassword").disabled = !document.getElementById("lockToggle").checked;
+}
+
 function addSubtitleRow() {
   const container = document.getElementById("subtitleContainer");
   const index = container.children.length;
@@ -139,44 +143,6 @@ function addSubtitleRow() {
     <input type="file" accept=".vtt" id="subtitleFile-${index}">
   `;
   container.appendChild(row);
-}
-
-function setSortOrder(order) {
-  sortOrder = order;
-  renderVideos();
-}
-
-function toggleUploadLock() {
-  document.getElementById("lockPassword").disabled = !document.getElementById("lockToggle").checked;
-}
-function renderVideos() {
-  fetch(`${SERVER}/videos/user/${me}`)
-    .then(res => res.json())
-    .then(videos => {
-      videos.sort((a, b) => {
-        const ta = new Date(a.date).getTime();
-        const tb = new Date(b.date).getTime();
-        return sortOrder === "asc" ? ta - tb : tb - ta;
-      });
-
-      const list = videos.map(v => `
-        <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
-          <img src="${SERVER}/thumbnails/${v.thumbnail || `${v.id}.jpg`}?t=${Date.now()}" width="200"><br>
-          <b>
-            ${v.title}
-            ${v.password ? `<img src="img/lock.svg" alt="locked" class="lockIcon">` : ""}
-          </b><br>
-          ${new Date(v.date).toLocaleString("ja-JP", {
-            year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit"
-          })}<br>
-          <a href="watch?id=${v.id}">watch</a>
-          <button onclick="deleteVideo('${v.id}')">delete</button>
-          <button onclick="showEdit('${v.id}', \`${v.title}\`, \`${v.description || ""}\`)">edit</button>
-          <div id="edit-${v.id}"></div>
-        </div>
-      `).join("");
-      document.getElementById("list").innerHTML = list || "No videos yet.";
-    });
 }
 
 function upload() {
@@ -253,9 +219,7 @@ function uploadSubtitles(videoId) {
     const fileInput = row.querySelector(`#subtitleFile-${i}`);
     const lang = langInput?.value.trim();
     const file = fileInput?.files[0];
-
     if (!lang || !file) return;
-
     if (file.size > 100 * 1024) {
       alert(`Subtitle file too big (${lang}).`);
       return;
@@ -272,6 +236,168 @@ function uploadSubtitles(videoId) {
       console.warn(`Failed to upload subtitle for ${lang}`);
     });
   });
+}
+
+function renderVideos() {
+  fetch(`${SERVER}/videos/user/${me}`)
+    .then(res => res.json())
+    .then(videos => {
+      videos.sort((a, b) => {
+        const ta = new Date(a.date).getTime();
+        const tb = new Date(b.date).getTime();
+        return sortOrder === "asc" ? ta - tb : tb - ta;
+      });
+
+      const list = videos.map(v => `
+        <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
+          <img src="${SERVER}/thumbnails/${v.thumbnail || `${v.id}.jpg`}?t=${Date.now()}" width="200"><br>
+          <b>
+            ${v.title}
+            ${v.password ? `<img src="img/lock.svg" alt="locked" class="lockIcon">` : ""}
+          </b><br>
+          ${new Date(v.date).toLocaleString("ja-JP", {
+            year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit"
+          })}<br>
+          <a href="watch?id=${v.id}">watch</a>
+          <button onclick="deleteVideo('${v.id}')">delete</button>
+          <button onclick="showEdit('${v.id}', \`${v.title}\`, \`${v.description || ""}\`)">edit</button>
+          <div id="edit-${v.id}"></div>
+        </div>
+      `).join("");
+      document.getElementById("list").innerHTML = list || "No videos yet.";
+    });
+}
+
+function showEdit(id, title, description) {
+  const container = document.getElementById(`edit-${id}`);
+  container.innerHTML = `
+    <p>Edit:</p>
+    <p>title</p>
+    <input id="title-${id}" value="${title}" style="width: 80%;"><br>
+    <p>description</p>
+    <textarea id="desc-${id}" rows="4" style="width: 80%;">${description}</textarea><br>
+    <p>thumbnail</p>
+    <input type="checkbox" id="useThumbEdit-${id}"> change thumbnail?<br>
+    <input id="thumb-${id}" type="file" accept=".jpg" disabled><br>
+    <p>lock</p>
+    <input type="checkbox" id="lockToggle-${id}" onchange="toggleEditLock('${id}')"> lock this video or music<br>
+    <input id="lockPassword-${id}" type="password" placeholder="password (if locked)" disabled><br>
+    <p>subtitles (.vtt)</p>
+    <input type="checkbox" id="useSubtitleEdit-${id}"> change subtitles?<br>
+    <div id="subtitleEditContainer-${id}" style="margin-left: 10px;"></div>
+    <button onclick="addSubtitleEditRow('${id}')">➕ Add subtitle</button><br>
+    <button onclick="submitEdit('${id}')">save</button>
+    <button onclick="cancelEdit('${id}')">cancel</button>
+  `;
+
+  document.getElementById(`useThumbEdit-${id}`).addEventListener("change", () => {
+    document.getElementById(`thumb-${id}`).disabled = !document.getElementById(`useThumbEdit-${id}`).checked;
+  });
+
+  document.getElementById(`useSubtitleEdit-${id}`).addEventListener("change", () => {
+    const checked = document.getElementById(`useSubtitleEdit-${id}`).checked;
+    document.getElementById(`subtitleEditContainer-${id}`).style.display = checked ? "block" : "none";
+  });
+}
+
+function addSubtitleEditRow(id) {
+  const container = document.getElementById(`subtitleEditContainer-${id}`);
+  const index = container.children.length;
+  const row = document.createElement("div");
+  row.className = "subtitleRow";
+  row.innerHTML = `
+    <input placeholder="language code (e.g. en, ja)" id="subtitleLangEdit-${id}-${index}" style="width: 120px;">
+    <input type="file" accept=".vtt" id="subtitleFileEdit-${id}-${index}">
+  `;
+  container.appendChild(row);
+}
+function toggleEditLock(id) {
+  document.getElementById(`lockPassword-${id}`).disabled = !document.getElementById(`lockToggle-${id}`).checked;
+}
+
+function cancelEdit(id) {
+  document.getElementById(`edit-${id}`).innerHTML = "";
+}
+
+function submitEdit(id) {
+  const titleEl = document.getElementById(`title-${id}`);
+  const descEl = document.getElementById(`desc-${id}`);
+  const thumbEl = document.getElementById(`thumb-${id}`);
+  const lockToggle = document.getElementById(`lockToggle-${id}`);
+  const passEl = document.getElementById(`lockPassword-${id}`);
+
+  const newTitle = titleEl.value.trim();
+  const newDesc = descEl.value.trim();
+  const thumbChecked = document.getElementById(`useThumbEdit-${id}`).checked;
+  const newThumb = thumbEl.files[0];
+  const isLocked = lockToggle.checked;
+  const password = passEl.value.trim();
+
+  if (thumbChecked && !newThumb) return alert("Select a thumbnail image.");
+  if (thumbChecked && newThumb.size > 130 * 1024) return alert("Thumbnail too big.");
+  if (isLocked && !password) return alert("Enter password.");
+
+  const form = new FormData();
+  form.append("title", newTitle);
+  form.append("description", newDesc);
+  form.append("lockPassword", isLocked ? password : "");
+
+  function finishSend(blob) {
+    if (blob) form.append("thumbnail", blob, "thumb.jpg");
+    fetch(`${SERVER}/editVideo/${id}`, {
+      method: "PATCH",
+      body: form
+    })
+    .then(res => res.ok ? res.json() : Promise.reject())
+    .then(() => {
+      if (document.getElementById(`useSubtitleEdit-${id}`).checked) {
+        uploadSubtitlesEdit(id);
+      }
+      renderVideos();
+      cancelEdit(id);
+    })
+    .catch(() => alert("Failed to save edits."));
+  }
+
+  if (thumbChecked) {
+    cropImage(newThumb, 640, 360, finishSend);
+  } else {
+    finishSend(null);
+  }
+}
+
+function uploadSubtitlesEdit(id) {
+  const container = document.getElementById(`subtitleEditContainer-${id}`);
+  const rows = container.querySelectorAll(".subtitleRow");
+
+  rows.forEach((row, i) => {
+    const langInput = row.querySelector(`#subtitleLangEdit-${id}-${i}`);
+    const fileInput = row.querySelector(`#subtitleFileEdit-${id}-${i}`);
+    const lang = langInput?.value.trim();
+    const file = fileInput?.files[0];
+    if (!lang || !file) return;
+    if (file.size > 100 * 1024) {
+      alert(`Subtitle file too big (${lang}).`);
+      return;
+    }
+
+    const form = new FormData();
+    form.append("language", lang);
+    form.append("subtitle", file);
+
+    fetch(`${SERVER}/uploadSubtitle/${id}`, {
+      method: "PATCH",
+      body: form
+    }).catch(() => {
+      console.warn(`Failed to upload subtitle for ${lang}`);
+    });
+  });
+}
+
+function deleteVideo(id) {
+  if (!confirm("Delete this video?")) return;
+  fetch(`${SERVER}/deleteVideo/${id}`, { method: "DELETE" })
+    .then(() => renderVideos());
 }
 
 function updateIcon() {
@@ -301,88 +427,6 @@ function updateIcon() {
       .catch(() => status.textContent = "❌ Icon update failed.")
       .finally(() => setTimeout(() => status.textContent = "", 3000));
   });
-}
-
-function showEdit(id, title, description) {
-  const container = document.getElementById(`edit-${id}`);
-  container.innerHTML = `
-    <p>Edit:</p>
-    <p>title</p>
-    <input id="title-${id}" value="${title}" style="width: 80%;"><br>
-    <p>description</p>
-    <textarea id="desc-${id}" rows="4" style="width: 80%;">${description}</textarea><br>
-    <p>thumbnail</p>
-    <input type="checkbox" id="useThumbEdit-${id}"> change thumbnail?<br>
-    <input id="thumb-${id}" type="file" accept=".jpg" disabled><br>
-    <p>lock</p>
-    <input type="checkbox" id="lockToggle-${id}" onchange="toggleEditLock('${id}')"> lock this video or music<br>
-    <input id="lockPassword-${id}" type="password" placeholder="password (if locked)" disabled><br>
-    <button onclick="submitEdit('${id}')">save</button>
-    <button onclick="cancelEdit('${id}')">cancel</button>
-  `;
-
-  document.getElementById(`useThumbEdit-${id}`).addEventListener("change", () => {
-    document.getElementById(`thumb-${id}`).disabled = !document.getElementById(`useThumbEdit-${id}`).checked;
-  });
-}
-
-function cancelEdit(id) {
-  document.getElementById(`edit-${id}`).innerHTML = "";
-}
-
-function submitEdit(id) {
-  const titleEl = document.getElementById(`title-${id}`);
-  const descEl = document.getElementById(`desc-${id}`);
-  const thumbEl = document.getElementById(`thumb-${id}`);
-  const lockToggle = document.getElementById(`lockToggle-${id}`);
-  const passEl = document.getElementById(`lockPassword-${id}`);
-
-  if (!titleEl || !descEl || !thumbEl || !lockToggle || !passEl) {
-    alert("編集フォームが正しく表示されていません。");
-    return;
-  }
-
-  const newTitle = titleEl.value.trim();
-  const newDesc = descEl.value.trim();
-  const thumbChecked = document.getElementById(`useThumbEdit-${id}`).checked;
-  const newThumb = thumbEl.files[0];
-  const isLocked = lockToggle.checked;
-  const password = passEl.value.trim();
-
-  if (thumbChecked && !newThumb) return alert("Select a thumbnail image.");
-  if (thumbChecked && newThumb.size > 130 * 1024) return alert("Thumbnail too big.");
-  if (isLocked && !password) return alert("Enter password.");
-
-  const form = new FormData();
-  form.append("title", newTitle);
-  form.append("description", newDesc);
-  form.append("lockPassword", isLocked ? password : "");
-
-  function finishSend(blob) {
-    if (blob) form.append("thumbnail", blob, "thumb.jpg");
-    fetch(`${SERVER}/editVideo/${id}`, {
-      method: "PATCH",
-      body: form
-    })
-    .then(res => res.ok ? res.json() : Promise.reject())
-    .then(() => {
-      renderVideos();
-      cancelEdit(id);
-    })
-    .catch(() => alert("Failed to save edits."));
-  }
-
-  if (thumbChecked) {
-    cropImage(newThumb, 640, 360, finishSend);
-  } else {
-    finishSend(null);
-  }
-}
-
-function deleteVideo(id) {
-  if (!confirm("Delete this video?")) return;
-  fetch(`${SERVER}/deleteVideo/${id}`, { method: "DELETE" })
-    .then(() => renderVideos());
 }
 
 function logout() {
