--- a/watch.html
+++ b/watch.html
@@ -1,4 +1,3 @@
-<!-- Part 1: watch.html with subtitle support -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -75,7 +74,6 @@
     </tr>
   </table>
   <div id="content"></div>
-
 <script>
 const id = new URLSearchParams(location.search).get("id");
 const content = document.getElementById("content");
@@ -136,6 +134,7 @@ if (!id) {
       } else {
         showMedia(info, mediaUrl, isAudio, lockIcon, postedTime);
       }
+
       function showMedia(info, mediaUrl, isAudio, lockIcon, postedTime) {
         const playerHtml = isAudio ? `
           <div id="waveform"></div>
@@ -187,14 +186,14 @@ if (!id) {
               const video = document.getElementById("player");
               video.src = url;
 
-              // 🎞️ 字幕追加
+              // 🎞️ 字幕追加（修正済み）
               if (Array.isArray(info.subtitles)) {
                 info.subtitles.forEach((sub, index) => {
                   const track = document.createElement("track");
                   track.kind = "subtitles";
                   track.label = sub.language;
                   track.srclang = sub.language;
-                  track.src = `${SERVER}/subtitles/${sub.fileName}`;
+                  track.src = `${SERVER}/subtitles/${id}/${sub.fileName}`;
                   if (index === 0) track.default = true;
                   video.appendChild(track);
                 });
